--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect</title>
+    <meta http-equiv="refresh" content="0; url=inner-folder/index.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    
+    <p>If you are not redirected, <a href="Algorithm_Visualizer/index.html">click here</a>.</p>
 </body>
 </html>
