--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=inner-folder/index.html">
+    <meta http-equiv="refresh" content="0; url=Algorithm_Visualizer/index.html">
     <title>Redirecting...</title>
 </head>
 <body>
